added Login-Signup Folder: contains LoginSignup jsx and css files. Also added LoginSignup.jsx in pages folder. Furthermore, edited App.js and Header.jsx to include Login in header and in route. Lastly, removed Subject from Header.jsx and pages folder

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -3,6 +3,7 @@ Added styles for a visually enhanced header with a background color and white te
 Increased the spacing between navigation items for better layout. 
 Introduced a smooth, animated underline effect for navigation links using the ::after pseudo-element, 
 which expands on hover. Also changed the hover color of the navigation links for improved interaction feedback.
+Added a new class for the login link to always have the hover effect.
 --rainier
 */
 
@@ -58,5 +59,14 @@ which expands on hover. Also changed the hover color of the navigation links for
 }
 
 .nav_item a:hover::after {
+    width: 100%;
+}
+
+/* New styles for login link */
+.nav_item a.login-link {
+    color: #f4b942;
+}
+
+.nav_item a.login-link::after {
     width: 100%;
 }
